Node Editor: Crash occurs with Select by Suffix #41933

Closed
opened 2014-09-24 07:13:28 +02:00 by Leon Cheung · 11 comments
Member

System Information
Win8 64bit | GTX680

Blender Version
Broken: 2.72 RC eb464ee

Short description of error
In Node Editor, when Shift G and choose "Suffix", Blender crashes.

Exact steps for others to reproduce the error
It's OK to test by using default scene. Thanks for checking.

**System Information** Win8 64bit | GTX680 **Blender Version** Broken: 2.72 RC eb464ee **Short description of error** In Node Editor, when **Shift G** and choose "Suffix", Blender crashes. **Exact steps for others to reproduce the error** It's OK to test by using default scene. Thanks for checking.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Bastien Montagne was assigned by Sergey Sharybin 2014-09-24 11:27:57 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Bastien, BLI_str_partition_ex_utf8 returns the length of the input string and NULL suffix, this is not properly checked by the callee function. Now, i'm not sure what value that function is expected to return, would think it should return length of the suffix? At leats that's what callee function expects it to be.

Bastien, `BLI_str_partition_ex_utf8` returns the length of the input string and NULL suffix, this is not properly checked by the callee function. Now, i'm not sure what value that function is expected to return, would think it should return length of the suffix? At leats that's what callee function expects it to be.
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Note from my side: I would expect a function like that to always return a valid string if a valid string is passed as input. That means if no delimiter is found it should make sep and suf empty strings (could be simply pointer to str + str_len, i.e. terminator char of the input).

Note from my side: I would expect a function like that to always return a valid string if a valid string is passed as input. That means if no delimiter is found it should make `sep` and `suf` empty strings (could be simply pointer to `str + str_len`, i.e. terminator char of the input).

BLI_str_partition_ex_utf8 follows exactly its char counter part BLI_str_partition_ex - we might discuss what's best to do here, but for now issue is in calling code, which is not following BLI's API… will fix.

`BLI_str_partition_ex_utf8` follows exactly its char counter part `BLI_str_partition_ex` - we might discuss what's best to do here, but for now issue is in calling code, which is not following BLI's API… will fix.

This issue was referenced by e18a74849c

This issue was referenced by e18a74849c2dda52b25e0ca35127f511999a471c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e18a74849c.

Closed by commit e18a74849c.

This issue was referenced by bf1946860b

This issue was referenced by bf1946860b8663c4163f94b70d91385240bbe9d5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41933
No description provided.