Fix T41933: Node Editor: Crash occurs with Select by Suffix

Wrong usage of `BLI_str_partition_ex_utf8`...

This is to be backported to 2.72 branch.